cluster/apps/home/home-assistant/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: home
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8123
      targetPort: 8123
  externalIPs:
    - ${IP_HASSIO}
