cluster/apps/home/home-assistant/service-entry.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: home-assistant
  namespace: home
spec:
  endpoints:
    - address: ${IP_HASSIO}
  hosts:
    - hassio.local
  location: MESH_EXTERNAL
  ports:
    - name: http
      number: 8123
      protocol: HTTP
      targetPort: 8123
  resolution: STATIC
